[B]5.6.0-1.11[/B]
- New: Option to select different Guide-views (see mod settings via sideblade)
- Minor redesign of the wall-view for Channels
- EPG-view: Added StartDate & Description on focus
- Fixed a bug when using LiveTV Widget with low main menu.

[B]5.6.0-1.10[/B]
- New: LiveTV Widget for home menu. Shows current & next recording. (Enable in skin settings)
- New: Small weather icon on home menu (add your own icons to /media/weather/normal)
- Fixed icons for recording and timers on several views
- Redesigned EPG dialog (shows start-time)
- Removed Channel-group dialog in fullscreen LiveTV (was always visible on some devices)
- Added scrollbar to "BigList" channel-view

[B]5.6.0-1.9[/B]
- New: Added Infobar-type: Compact (choose from sidebar settings)
- New: Hidden background textures when using Guide-view in fullscreen-video
- Fixed buggs in the standard infobar (active encryption & tuner color)
- Fixed missing background textures in Guide views
- Removed Pause icon while zapping or while channel buffers
- Larger fonts on certain panels (dialog info\infobar)
- Changed animation to fade for OSD and infobar
- Changed background texture for the "mute-bug"

[B]5.6.0-1.8[/B]
- New channels view: BigList (enigma2-style)
- Larger font size on BigList and Channels-OSD
- Changed to fade-animation for Channels-OSD
- Minor fixes

[B]5.6.0-1.7[/B]
- Integration with LiveTV mod.
- Added White-theme


------------------------- BigNoid's changes -----------------------------
[B]5.6.0[/B]
- Fixed a problem with black overlay texture.

[B]5.5.9[/B]
- Updated language files from Transifex

[B]5.5.8[/B]
- Added support for Extended Info script - thx Steveb!
- Add BigList view - thx Steveb!
- Add support for Hebrew font - thx filthycatbox!
- Fix empty submenu for Custom menu item #5

[B]5.5.7[/B]
- Video Info Dialog: Converted actor list to thumb panel.
- Info panel: fix navigation to textbox/media menu on music views.
- Added viewtype "Wall" - thx phil65!