@@ -414,6 +414,16 @@
 					<width>1920</width>
 					<height>560</height>
 					<texture>gradient_floor.png</texture>
+					<visible>!Skin.HasSetting(lowermainmenu)</visible>
+				</control>
+				<control type="image">
+					<description>bg image</description>
+					<left>0</left>
+					<top>-50</top>
+					<width>1920</width>
+					<height>800</height>
+					<texture flipy="true">gradient_floor.png</texture>
+					<visible>Skin.HasSetting(lowermainmenu)</visible>
 				</control>
 				<control type="image">
 					<description>Cover image</description>
@@ -978,7 +988,7 @@
 	<include name="LiveTVWidget">
 		<control type="group">
 			<left>490r</left>
-			<top>130</top>
+			<top>200</top>
 			<visible>StringCompare(Container(9000).ListItem.Property(WidgetType),12)</visible>
 			<include>VisibleFadeEffect</include>
 			<include>Window_OpenClose_Animation</include>
@@ -987,7 +997,7 @@
 				<animation effect="slide" start="0,0" end="0,100" time="0" condition="PVR.IsRecording">conditional</animation>
 				<visible>PVR.HasNonRecordingTimer</visible>
 				<height>120</height>
-				<top>50</top>
+				<top>30</top>
 				<control type="image">
 					<left>-200</left>
 					<top>0</top>
