@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon
   id="skin.aeon.nox.5.maniac"
-  version="5.6.0-1.11"
+  version="5.6.0-1.12"
   name="Aeon Nox 5 - Maniac"
   provider-name="Maniac">
 	<requires>
