@@ -1,3 +1,9 @@
+[B]5.6.0-1.12[/B]
+- Hotfix: A shot at fixing the "Unable to build menu" error on certain devices (Thanks Ignoble61)
+- Fixed missing timer & recording icons in Guide view
+- Fixed missing textures in Guide View
+- Fixed LiveTV Widgets when in use with "lower" home menu
+
 [B]5.6.0-1.11[/B]
 - New: Option to select different Guide-views (see mod settings via sideblade)
 - Minor redesign of the wall-view for Channels
